# cmake-playground

./: CMakeLists.txt  LICENSE
src/: lib.cpp  lib.h
test/: some_library_integration_tests.cpp  some_library_unit_tests.cpp
